# devpp

./: .gitignore  .gitmodules  .prettierignore  .prettierrc.json  Cargo.toml  contributing.md  readme.md  rust-toolchain.toml
.devcontainer/: Containerfile  devcontainer.json
contrib/containers/: Containerfile
crates/containerfile/: Cargo.toml
crates/containerfile/src/: lib.rs
crates/containerfile/src/instr/: copy.rs  directive.rs  from.rs  mod.rs
crates/containerfile/src/instr/run/: device.rs  mod.rs  network.rs  security.rs
crates/containerfile/src/instr/run/mount/: bind.rs  cache.rs  mod.rs  secret.rs  ssh.rs  tmpfs.rs
crates/devpp/: Cargo.toml
crates/devpp-containerfile/: Cargo.toml
crates/devpp-containerfile/src/: error.rs  lib.rs
crates/devpp-core/: Cargo.toml
crates/devpp-core/src/: error.rs  lib.rs
crates/devpp-spec/: Cargo.toml  build.rs
crates/devpp-spec/src/: devc.rs  devc.schema.json.patch  devpp.rs  devpp.schema.json  error.rs  feat.rs  feat.schema.json.patch  lib.rs
crates/devpp-spec/tests/fixtures/config_ambiguous/.devcontainer/: devcontainer.json
crates/devpp-spec/tests/fixtures/feature_entrypoint_not_found/.devcontainer/: devcontainer.json
crates/devpp-spec/tests/fixtures/feature_id_mismatch/.devcontainer/: devcontainer.json
crates/devpp-spec/tests/fixtures/feature_id_mismatch/.devcontainer/features/bar/: devcontainer-feature.json
crates/devpp-spec/tests/fixtures/feature_metadata_not_found/.devcontainer/: devcontainer.json
crates/devpp-spec/tests/fixtures/reference_invalid_argument/.devcontainer/: devcontainer.json
crates/devpp-spec/tests/fixtures/reference_not_found/.devcontainer/: devcontainer.json
crates/devpp-spec/tests/fixtures/reference_path_absolute/.devcontainer/: devcontainer.json
crates/devpp-spec/tests/fixtures/reference_path_illegal/.devcontainer/: devcontainer.json
crates/devpp-spec/tests/fixtures/reference_path_traversal/.devcontainer/image/: devcontainer.json
crates/devpp-spec/tests/fixtures/reference_scheme_mismatch/.devcontainer/: devcontainer.json
crates/devpp/src/: args.rs  color.rs  devcontainer.rs  devcontainer.schema.json  error.rs  extension.rs  extension.schema.json  feature.rs  lib.rs  main.rs
crates/devpp/src/cmd/: build.rs  completion.rs  mod.rs
crates/devpp/tests/: tests.rs
crates/devpp/tests/config_illegal_path/workspace/.devcontainer/: devcontainer.json
crates/devpp/tests/feature_mismatch_id/.devcontainer/features/foo/: devcontainer-feature.json
crates/devpp/tests/feature_missing_install/.devcontainer/features/foo/: devcontainer-feature.json
crates/devpp/tests/feature_missing_metadata/.devcontainer/features/foo/: install.sh
crates/devpp/tests/featureref_absolute/.devcontainer/: devcontainer.json
crates/devpp/tests/featureref_local_illegal/illegal_features/bar/: .gitignore
crates/devpp/tests/featureref_local_traversal/.devcontainer/my_image/: devcontainer.json
crates/devpp/tests/featureref_remote/.devcontainer/: devcontainer.json
crates/stable-topo-sort/: Cargo.toml
crates/stable-topo-sort/src/: error.rs  lib.rs
