#:schema https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/cargo.json
# @help: https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dependencies]

[dev-dependencies]

[features]
default = []

[package]
edition = "2024"
name = "containerfile"
version = "0.0.0"
