#:schema https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/cargo.json
# @help: https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dependencies]
thiserror = "2.0.17"

devpp-spec = { workspace = true }

[dev-dependencies]

[package]
edition = "2024"
name = "devpp-containerfile"
version = "0.0.0"
