#:schema https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/cargo.json
# @help: https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dependencies]
regex = "1.11.3"
thiserror = "2.0.17"

devpp-spec = { workspace = true }

[dev-dependencies]

[features]
default = ["devpp"]

devpp = ["devpp-spec/devpp"]

[package]
edition = "2024"
name = "devpp-containerfile"
version = "0.0.0"
