#:schema https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/cargo.json
# @help: https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dependencies]
devpp-containerfile = { workspace = true }
devpp-spec = { workspace = true }
thiserror = "2.0.17"
topo_sort = "0.4.0"

[dev-dependencies]

[features]
default = ["devpp"]

devpp = ["devpp-containerfile/devpp", "devpp-spec/devpp"]

[package]
edition = "2024"
name = "devpp-core"
version = "0.0.0"
