#:schema https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/cargo.json
# @help: https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dependencies]
containerfile = { workspace = true }
devpp-spec = { workspace = true }
stable-topo-sort = { workspace = true }
thiserror = "2.0.17"

[dev-dependencies]

[features]
default = []

[package]
edition = "2024"
name = "devpp-core"
version = "0.0.0"
