#:schema https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/cargo.json
# @help: https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
diffy = "0.4.2"
prettyplease = "0.2.37"
schemars = "0.8.22"
serde_json = "1.0.145"
syn = "2.0.106"
typify = "0.4.3"

[dependencies]
json-strip-comments = "3.0.1"
oci-spec = "0.8.2"
regress = "0.10.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
url = "2.5.7"

[dev-dependencies]

[package]
edition = "2024"
name = "devpp-spec"
version = "0.0.0"
