#:schema https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/cargo.json
# @help: https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]

[package]
edition = "2024"
name = "devpp"
version = "0.0.0"
