#:schema https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/cargo.json
# @help: https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dependencies]
anstyle = "1.0.13"
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"
thiserror = "2.0.17"
topo_sort = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

devpp-containerfile = { workspace = true }
devpp-spec = { workspace = true }

[dev-dependencies]

[features]
default = []

artifact = ["devpp-spec/artifact"]
tarball = ["devpp-spec/tarball"]

[package]
edition = "2024"
name = "devpp"
version = "0.0.0"
